Fixes styling issue with character picture, shows input outlines on touch devices

--- a/Fortuna/Pages/CharacterCreator.razor
+++ b/Fortuna/Pages/CharacterCreator.razor
@@ -84,7 +84,7 @@
     </div>
 
     <img src="@_playerSheet.ImageUrl" alt="Image of the character @_playerSheet.Name." class="char-picture" height="500px"/>
-    <input @bind="_playerSheet.ImageUrl" inputmode="url" class="char-picture"/>
+    <input @bind="_playerSheet.ImageUrl" inputmode="url" class="char-url-input"/>
 
 </div>
 
