--- a/Fortuna/Pages/AftikDesigner.razor
+++ b/Fortuna/Pages/AftikDesigner.razor
@@ -1,6 +1,6 @@
 ﻿@page "/AftikDesigner"
 @using BlazorDownloadFile
-<h2>AftikDesigner</h2>
+<h2>Aftik Designer</h2>
 
 <div class="character-display">
 <div class="column-container">
@@ -31,9 +31,11 @@
     </label>
     <br/>
     <button @onclick="YouWouldNotDownloadAnAftik">Download SVG</button>
+    <br/>
+    <a href="https://cosmosdex.com/cosmosdex/species/aftik" target="_blank" rel="noreferrer noopener">Learn more about Aftiks!</a>
 </div>
 <div class="column-right">
-@* do not uncomment *@
+@* do not expand element below *@
 <svg
     style="width: 100%; height: 100%"
     id="svg2"
@@ -430,7 +432,7 @@
     transform="translate(103.025,119.7819)"/>
 </g>
 </svg>
-@* do not uncomment *@
+@* do not expand element above *@
 </div>
 </div>
 </div>
