--- a/Fortuna/Shared/Tooltip.razor
+++ b/Fortuna/Shared/Tooltip.razor
@@ -1,5 +1,5 @@
 ﻿<div class="tooltip-wrapper">
-    <span>@Text</span>
+    <span>@((MarkupString)Text)</span>
     @ChildContent
 </div>
 
@@ -10,5 +10,4 @@
 
     [Parameter]
     public string Text { get; set; }
-
 }
