--- a/Fortuna/Pages/CharacterCreator.razor
+++ b/Fortuna/Pages/CharacterCreator.razor
@@ -2,6 +2,7 @@
 @using BlazorDownloadFile
 @using System.Text.Json
 @using System.IO
+@using System.Text
 @inject HttpClient _http
 @inject IJSRuntime _jsRuntime
 
@@ -206,7 +207,7 @@
      */
     private async Task ExportToJson()
     {
-        await BlazorDownloadFileService.DownloadFileFromText($"{_playerSheet.Name}-{DateTime.Now:MM-dd-yy_hh-mm-ss}.json", JsonSerializer.Serialize(_playerSheet, typeof(FortunaSheet), Options), "text/json");
+        await BlazorDownloadFileService.DownloadFileFromText($"{_playerSheet.Name}-{DateTime.Now:MM-dd-yy_hh-mm-ss}.json", JsonSerializer.Serialize(_playerSheet, typeof(FortunaSheet), Options), Encoding.Default, "text/json");
     }
 
     /**
