Adds source code link to header bar

--- a/Fortuna/Shared/MainLayout.razor
+++ b/Fortuna/Shared/MainLayout.razor
@@ -7,7 +7,7 @@
 
     <div class="main">
         <div class="top-row px-4">
-            <a href="https://cosmosdex.com/" target="_blank" class="ml-md-auto">The Cosmosdex(Unaffiliated)</a>
+            <a href="https://github.com/MarkSuckerberg/tabletuna-site" target="_blank" class="ml-md-auto">Source Code</a>
         </div>
 
         <div class="content px-4">
