--- a/Fortuna/Shared/NavMenu.razor
+++ b/Fortuna/Shared/NavMenu.razor
@@ -35,8 +35,7 @@
 
     private string NavMenuCssClass => _collapseNavMenu ? "collapse" : null;
 
-    private void ToggleNavMenu()
-    {
+    private void ToggleNavMenu() {
         _collapseNavMenu = !_collapseNavMenu;
     }
 }
