--- a/Fortuna/Pages/CharacterCreator.razor
+++ b/Fortuna/Pages/CharacterCreator.razor
@@ -1,8 +1,8 @@
 ﻿@page "/CharacterCreator"
 @using BlazorDownloadFile
 @using System.Text.Json
-@using System.IO
 @using System.Text
+@using System.IO
 @inject HttpClient _http
 @inject IJSRuntime _jsRuntime
 
@@ -171,10 +171,10 @@
     private Dictionary<string, Trait> _traitsList = new() { { "Please wait...", new Trait(TraitValue.Special, "Impatient", "You didn't wait, you bastard! I asked nicely!") } };
     /// A dictionary of trait lists, with the key being the value the list contains the traits of.
     private readonly Dictionary<TraitValue, List<Trait>> _traitsValueDict = new() { { TraitValue.Ability, new List<Trait>() }, { TraitValue.Bad, new List<Trait>() }, { TraitValue.Good, new List<Trait>() }, { TraitValue.Neutral, new List<Trait>() }, { TraitValue.Special, new List<Trait>() } };
-    
+
     /// Random instance for use in randomization.
     private readonly Random _random = new();
-    
+
     /// Error that occurred while importing, shows up to the right of the import button
     private string _importError = "";
 
@@ -186,8 +186,7 @@
     /// Text in the new move text input box
     private string _newMoveText = "";
 
-    protected override async Task OnInitializedAsync()
-    {
+    protected override async Task OnInitializedAsync() {
         Trait[] inputList = await _http.GetFromJsonAsync<Trait[]>("traits.json");
         if (inputList != null) {
             _traitsList = new Dictionary<string, Trait>();
@@ -201,8 +200,7 @@
     /**
      * Called whenever the trait selection dropdown is used. Value is the string name of the trait.
      */
-    private void TraitDropdownSelect(object value)
-    {
+    private void TraitDropdownSelect(object value) {
         Trait traitToAdd = _traitsList[(string)value];
         if (_playerSheet.Traits.Contains(traitToAdd)) { return; }
         _playerSheet.Traits.Add(traitToAdd);
@@ -212,16 +210,14 @@
     /**
      * Exports the character sheet to a .json file, for later loading with ImportFromJson().
      */
-    private async Task ExportToJson()
-    {
+    private async Task ExportToJson() {
         await BlazorDownloadFileService.DownloadFileFromText($"{_playerSheet.Name}-{DateTime.Now:MM-dd-yy_hh-mm-ss}.json", JsonSerializer.Serialize(_playerSheet, typeof(FortunaSheet), Options), Encoding.Default, "text/json");
     }
 
     /**
      * Imports a character sheet from an exported .json file created by ExportToJson().
      */
-    private async Task ImportFromJson(InputFileChangeEventArgs args)
-    {
+    private async Task ImportFromJson(InputFileChangeEventArgs args) {
         Stream stream = args.File.OpenReadStream();
         StreamReader reader = new(stream);
         try {
@@ -235,24 +231,21 @@
     /**
      * Removes item specified in argument target.
      */
-    private void RemoveItem(string target)
-    {
+    private void RemoveItem(string target) {
         _playerSheet.Inventory.Remove(target);
     }
 
     /**
      * Adds a new item from the text specified in _newItemText
      */
-    private void AddItem()
-    {
+    private void AddItem() {
         _playerSheet.Inventory.Add(_newItemText);
     }
 
     /**
      * Checks for duplicates before adding a move from the text specified in _newMoveText.
      */
-    private void AddMove()
-    {
+    private void AddMove() {
         if (_playerSheet.Moves.ContainsKey(_newMoveText)) { return; }
         _playerSheet.Moves.Add(_newMoveText, new Move());
     }
@@ -260,8 +253,7 @@
     /**
      * Returns a markdown-compatible version of the character sheet. Doesn't include inventory or moves.
      */
-    private string GetMarkdownSheet()
-    {
+    private string GetMarkdownSheet() {
         string retValue = $"# {_playerSheet.Name} #\n\nSpecies: {_playerSheet.Species}\nPronouns: {_playerSheet.Pronoun}\nClass: {_playerSheet.Class}\n";
 
         Dictionary<TraitValue, List<Trait>> traitsLists = new();
@@ -284,8 +276,7 @@
     /**
      * Copies the markdown-ified sheet into the user's clipboard by using JS interop (JS function found in js/clipboard.js)
      */
-    private async Task CopySheetToClipboard()
-    {
+    private async Task CopySheetToClipboard() {
         string result = GetMarkdownSheet();
         await _jsRuntime.InvokeVoidAsync("clipboardCopy.copyText", result);
     }
@@ -293,18 +284,18 @@
     /**
      * Randomizes the trait selection, giving three neutral, three good, two bad, and a 1/25 chance of a special trait.
      */
-    private void RandomizeTraits()
-    {
+    private void RandomizeTraits() {
         _playerSheet.Traits = new List<Trait>(); //Wipe it clean, start again
 
-        for (int i = 0; i < 3; i++) { //TODO: Find way to make this not hardcoded for each different value, somehow
+        for (int i = 0; i < 3; i++) {
+    //TODO: Find way to make this not hardcoded for each different value, somehow
             _playerSheet.Traits.Add(GetRandomTrait(TraitValue.Neutral));
         }
-        
+
         for (int i = 0; i < 3; i++) {
             _playerSheet.Traits.Add(GetRandomTrait(TraitValue.Good));
         }
-        
+
         for (int i = 0; i < 2; i++) {
             _playerSheet.Traits.Add(GetRandomTrait(TraitValue.Bad));
         }
@@ -312,31 +303,29 @@
         if (_random.Next(25) == 1) {
             _playerSheet.Traits.Add(GetRandomTrait(TraitValue.Special));
         }
-        
+
         _playerSheet.Traits.Sort(Trait.CompareTraitValue);
     }
 
     /**
      * Returns a random trait with the specified TraitValue.
      */
-    private Trait GetRandomTrait(TraitValue desiredValue)
-    {
+    private Trait GetRandomTrait(TraitValue desiredValue) {
         return _traitsValueDict[desiredValue][_random.Next(_traitsValueDict[desiredValue].Count)];
     }
 
     /**
      * Randomizes the stats, never actually getting to 26, getting near but never going over it.
      */
-    private void RandomizeStats()
-    {
+    private void RandomizeStats() {
         List<int> randomValues = new();
-        
+
         for (int i = 0; i < _playerSheet.Stats.Count; i++) {
             randomValues.Add(_random.Next(10));
         }
 
         int j = 0;
-        foreach(string stat in _playerSheet.Stats.Keys) {
+        foreach (string stat in _playerSheet.Stats.Keys) {
             _playerSheet.Stats[stat] = (int)((float)randomValues[j] / randomValues.Sum() * FortunaSheet.MaxStatPoints); //TODO: Make this always return a sum of 26 somehow. Also simplify it.
             j++;
         }
