Makes upload button match the theme, because HTML is awesome.

--- a/Fortuna/Pages/CharacterCreator.razor
+++ b/Fortuna/Pages/CharacterCreator.razor
@@ -157,7 +157,11 @@
 
 <button @onclick="CopySheetToClipboard">[Copy]</button>
 <button @onclick="ExportToJson">[Export]</button>
-<InputFile OnChange="ImportFromJson">[Import]</InputFile>
+<span class="file-input-container">
+    <label class="button" for="upload">[Upload]</label>
+    <InputFile OnChange="ImportFromJson" hidden id="upload">[Import]</InputFile>
+</span>
+
 @_importError
 
 @code {
