--- a/Fortuna/Pages/CharacterCreator.razor.css
+++ b/Fortuna/Pages/CharacterCreator.razor.css
@@ -54,6 +54,18 @@ button:hover {
     color: blue;
 }
 
+.file-input-container label {
+    font-family: "Poiret One", 'Times New Roman', Arial, sans-serif;
+    font-weight: 800;
+    border: none;
+    background: none;
+    padding: 1px 4px 1px 4px;
+}
+
+.file-input-container label:hover {
+    color: blue;
+}
+
 .move-flex-box {
     display: flex;
 }
@@ -75,3 +87,4 @@ button:hover {
         width: 75%;
     }
 }
+
